--- a/bt_tao_danh_sach.html
+++ b/bt_tao_danh_sach.html
@@ -24,7 +24,18 @@
                 <li>Houston</li>
             </ol>
         <li><strong>Trung Quốc</strong></li>
-            <ol>
+            <ol> <!-- gõ tắt kiểu shorthand: ol>li*4 hoặc copy dòng trước ấn alt + shift + up or downư
+                nested list: lồng danh sách
+                gõ ở nhiều dòng thì ấn alt + click chuột
+                gõ ghi chú: crl + /
+            -->
+            <!-- thẻ a: anchor - giúp liên kết các thành phần khác của trang web 
+                tải file liên kết trong thẻ a thì có thuộc tính download, nếu muốn đổi tên file tài về thì gõ download ="tên_file"
+                đặt thuộc tính: id - để gọi thuộc tính trong thẻ a ở href="#+tên thuộc tính đặt ở id
+                thuộc tính target="_blank" - mở ở 1 cửa sổ mới
+                tag (thẻ) = element node và attribule node và text node thì attribule node + text node phải nằm trong element notex`
+                "-->
+            <a href=""></a>
                 <li>Beijing</li>
                 <li>Chongqing</li>
                 <li>Shanghai</li>
