[Bài tập] Tạo form đơn giản

--- a/Form/BasicForm.html
+++ b/Form/BasicForm.html
@@ -59,6 +59,9 @@
             {
                 color: blue;
             }
+            .submit{
+                font-family: 'Times New Roman', Times, serif
+            }
         </style>
         <tr>
             <td>Họ và tên:<span style="color: red ;">*</span></td>
@@ -108,8 +111,8 @@
             <tr>
                 <td></td>
                 <td>
-                <input type="submit" value="Đăng kí">
-                <input type="reset" value="Nhập lại">
+                <input type="submit" class="submit" value="Đăng kí">
+                <input type="reset" class="reset" value="Nhập lại">
                 </td>
             </tr>
         </table>
