[Thực hành] Nhúng JavaScript

--- a/JVS/ThucHanhJS/InputDisplay.html
+++ b/JVS/ThucHanhJS/InputDisplay.html
@@ -7,12 +7,8 @@
     <title>InputDisplay</title>
 </head>
 <body>
-    <button type="button" onclick="ShowMessage();">Click me!!</button>
-    
+    <button type="button" onclick="ShowMessage();">Click Me!</button>
 </body>
-<script>
-    function ShowMessage(){
-        console.log('Xin chào!');
-    }
+<script src="InputDisplay.js">
 </script>
 </html>
