--- a/JVS/ExerciseVarDatatypeOprerator/Exercice3_4/Exercise3_4.html
+++ b/JVS/ExerciseVarDatatypeOprerator/Exercice3_4/Exercise3_4.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    
 </body>
-<script src="UseOperator.js"></script>
+<script src="Exercise3_4.js"></script>
 </html>
