--- a/JVS/ExerciseVarDatatypeOprerator/Exercise1/Exircise1.html
+++ b/JVS/ExerciseVarDatatypeOprerator/Exercise1/Exircise1.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ececise1</title>
 </head>
 <body>
+    
 </body>
-<script src="UseOperator.js"></script>
+<script src="Exercise1.js"></script>
 </html>
