--- a/JVS/ExerciseVarDatatypeOprerator/Exercise2/Exercise2.html
+++ b/JVS/ExerciseVarDatatypeOprerator/Exercise2/Exercise2.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    
 </body>
-<script src="UseOperator.js"></script>
+<script src="Exercise2.js"></script>
 </html>
