--- a/CreateTable/Schedule10_2019.html
+++ b/CreateTable/Schedule10_2019.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Schedule</title>
 </head>
 <style>
-    table{
+    table{ 
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-weight: 14;
         text-align: center ;  width: 50px ;
@@ -15,13 +15,12 @@
     }
     td, tr{ 
         border: 1px solid black ;
-        border-collapse: collapse; 
+        border-collapse: collapse;
       
     }
   
 </style>
 <body>
-    <table>
         <caption style="color: blue ;">Tháng 10 - October</caption>
             <tr>
             <th style="color: white; background-color: red ;">C.Nhật</th>
