[Bài tập] Câu lệnh switch-case

--- a/JVS/MoneyChange/MoneyChange.html
+++ b/JVS/MoneyChange/MoneyChange.html
@@ -10,7 +10,7 @@
     
 -->
 <body>
-    <table border="1">
+    <table>
         <tr style="text-align: center ;">
             <td><strong>Amount</strong></td>
             <td><strong>From Currency</strong></td>
