[Bài tập] Sinh bảng cửu chương

--- a/Loop/Loop1/NestedLoop.html
+++ b/Loop/Loop1/NestedLoop.html
@@ -30,7 +30,7 @@
 // sout = sout + "</table>";
 // document.write(sout);
     let result, x, y;
-    result = "<table border='1' width='300' cellspacing='0' cellpadding='3'>"
+    result = "<table border='1' width='1000px' cellspacing='0' cellpadding='3'>"
     x = y =1;
     while (x <=10){
         result = result + "<tr>";
