--- a/Array/findValueArray.html
+++ b/Array/findValueArray.html
@@ -10,15 +10,27 @@
     
 </body>
 <script>
-    let value = prompt("Nhập 1 số");
-let nums = [-3, 5, 1, 3, 2, 10];
-for(let i = 0; i <nums.length; i++){
-    if(value == nums[i]){
-        alert("Giá trị " + nums[i] + " đã tìm thấy ở " + i);
-    }//else{
-    //     alert("Không tìm thấy giá trị trong mảng - ấn F5 nhập lại4");
-    // }
-}
+//     let value = prompt("Nhập 1 số");
+// let nums = [-3, 5, 1, 3, 2, 10];
+// for(let i = 0; i <nums.length; i++){
+//     if(value == nums[i]){
+//         alert("Giá trị " + nums[i] + " đã tìm thấy ở " + i);
+//     }//else{
+//     //     alert("Không tìm thấy giá trị trong mảng - ấn F5 nhập lại4");
+//     // }
+//}
+
+do {
+    let value = Number(prompt("Nhập 1 số"));
+    let nums = [-3, 5, 1, 3, 2, 10];
+    for(let i = 0; i <nums.length; i++){
+        if (value == nums[i]){
+            alert("Giá trị " + nums[i] + " đã tìm thấy ở " + i);
+        }
+    }
+    i=0;
+} while (value != -3 && value != 5 && value != 1 
+        && value != 3 && value != 2 && value != 10);
 </script>
 </html>
 
