[Thực hành] Tìm giá trị nhỏ nhất của mảng

--- a/Array/Function/Function1/temConverter.html
+++ b/Array/Function/Function1/temConverter.html
@@ -13,8 +13,8 @@
         <input type="number" name="" id="inputFahrenheit" placeholder="Fahrenheit"
         oninput="temperatureConverter(this.value)"
         onchange="temperatureConverter(this.value)">
-    <!--oninput  thay đổi giá trị value trong thẻ khi user nhập
-        onchange kích hoạt ngay khi giá trị value thay đổi (thay cho F5) -->
+    <!--oninput kích hoạt thẻ ngay khi thay đổi giá trị value trong thẻ khi user nhập
+        onchange kích hoạt khi trỏ con trỏ vào (thay cho F5) -->
     </p>
     <p>Celsius: <span id="outputCelsius"></span></p>
 
