--- a/Subject/Rec.html
+++ b/Subject/Rec.html
@@ -31,7 +31,7 @@
             return this.height*this.width;
         }
         this.getPerimeter = function(){
-            return (this.getHeight + this.width)*2;
+            return (this.height + this.width)*2;
         }
     }
     let rec = new rectangle(150,50); // khai báo biến rec ở đối tượng hcn
@@ -42,5 +42,7 @@
     ctx.beginPath();
     ctx.fillStyle = '#fa4b2a';
     ctx.fillRect(10, 10, width, height);//ctx.fillRect(x, y, width, height) - với x, y là tọa góc trên bên trái hcn
+    document.writeln(rec.getArea());
+    document.writeln(rec.getPerimeter());
 </script>
 </html>
